--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^24.8.0",
-    "rewire": "^4.0.1"
+    "rewire": "^4.0.1",
+    "xml2js": "^0.4.23"
   },
   "dependencies": {
     "axios": "^0.21.1",
