--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "xml2js": "^0.4.23"
   },
   "dependencies": {
+    "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "check-types": "^9.0.1",
     "dotenv": "^8.0.0"
