--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^24.8.0",
-    "rewire": "^4.0.1",
-    "xml2js": "^0.4.23"
+    "rewire": "^4.0.1"
   },
   "dependencies": {
     "ajv": "^6.12.6",
