Add portal backend configmap. Rename portal backend directory.

--- a/integration_test/manifests/portal-backend/deployment.yaml
+++ b/integration_test/manifests/portal-backend/deployment.yaml
@@ -17,3 +17,6 @@ spec:
         image: mojaloop/finance-portal-backend-service
         ports:
         - containerPort: 3002
+        envFrom:
+        - configMapRef:
+            name: portal-backend
