--- a/.github/workflows/validate-manifests.yaml
+++ b/.github/workflows/validate-manifests.yaml
@@ -13,3 +13,4 @@ jobs:
         kustomize: 3.10.0
         command: |
           find integration_test/manifests -maxdepth 1 -mindepth 1 -type d | while read dir; do kustomize build $dir | kubeval --strict; done
+          kustomize build integration_test/authorisation | kubeval --strict
