--- a/integration_test/manifests/wso2is-populate/job.yaml
+++ b/integration_test/manifests/wso2is-populate/job.yaml
@@ -15,5 +15,5 @@ spec:
     spec:
       containers:
       - name: job
-        image: wso2is-populate
+        image: ghcr.io/modusintegration/wso2is-populate:latest
       restartPolicy: OnFailure
