--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -34,5 +34,8 @@ jobs:
     - name: Tail job logs
       run: kubectl logs -f jobs/wso2is-populate
 
+    - name: Print resources
+      run: kubectl get svc,deploy,configmap,job -A
+
     - name: Wait for populate to complete
       run: kubectl wait --for=condition=complete jobs/wso2is-populate
