Add readinessprobe to wso2is. Use it in integration tests.

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -31,6 +31,9 @@ jobs:
     - name: Deploy
       run: skaffold run
 
+    - name: Wait for wso2is to come up
+      run: kubectl wait --for=condition=available --timeout=180s deploy/wso2is
+
     - name: Tail job logs
       run: kubectl logs -f jobs/wso2is-populate
 
