--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -61,10 +61,10 @@ jobs:
 
     - name: Curl wso2is
       run: |-
-        kubectl run curl --image curlimages/curl --command -- sleep 70s
-        kubectl wait --for=condition=ready pod/curl
-        time kubectl exec -it curl -- curl -siu 'admin:admin' -k 'https://wso2is:9443'
-        time kubectl exec -it curl -- curl -siu 'admin:admin' -k 'https://wso2is:9443/scim2/Groups'
+        kubectl run curl2 --image curlimages/curl --command -- sleep 70s
+        kubectl wait --for=condition=ready pod/curl2
+        time kubectl exec -it curl2 -- curl -siu 'admin:admin' -k 'https://wso2is:9443'
+        time kubectl exec -it curl2 -- curl -siu 'admin:admin' -k 'https://wso2is:9443/scim2/Groups'
 
     - name: Print resources
       run: kubectl get svc,deploy,configmap,job,pod -A
