Put kubefwd in background

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -90,7 +90,10 @@ jobs:
       run: time kubectl wait --timeout=600s --for=condition=complete jobs/wso2is-populate
 
     - name: Forward cluster services
-      run: sudo -E kubefwd services --context k3d-int-test
+      run: |-
+        sudo -E kubefwd services --context k3d-int-test &
+        # sleep 5
+        # timeout 1 bash -c "cat < /dev/null > /dev/tcp/portal-backend/80"
 
     # TODO: make this a little more dynamic- we should modify the password to be something random
     # each time we run this test, then use it here. If we do it in `src/imports/users.json` before
