suck it up and multi-line the curls

--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -99,18 +99,18 @@ jobs:
     # each time we run this test, then use it here. If we do it in `src/imports/users.json` before
     # `skaffold run`, skaffold should pick up in the built wso2is-populate image.
     - name: Check we can log in with portaladmin
-      run: >2
-        curl -L -X POST 'http://portal-backend/login'
-          -H 'Content-Type: application/json'
+      run: |-
+        curl -L -X POST 'http://portal-backend/login' \
+          -H 'Content-Type: application/json' \
           --data-raw '{
             "username": "portaladmin",
             "password": "mcvV2KYw9eKPqNagjGy6"
           }'
 
     - name: Check we can log in with portaluser
-      run: >2
-        curl -L -X POST 'http://portal-backend/login'
-          -H 'Content-Type: application/json'
+      run: |-
+        curl -L -X POST 'http://portal-backend/login' \
+          -H 'Content-Type: application/json' \
           --data-raw '{
             "username": "portaluser",
             "password": "mcvV2KYw9eKPqNagjGy5"
