--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -108,6 +108,7 @@ jobs:
       run: |-
         curl -L -X POST 'http://portal-backend/login' \
           -H 'Content-Type: application/json' \
+          --fail-with-body \
           --data-raw '{
             "username": "portaladmin",
             "password": "mcvV2KYw9eKPqNagjGy6"
@@ -117,6 +118,7 @@ jobs:
       run: |-
         curl -L -X POST 'http://portal-backend/login' \
           -H 'Content-Type: application/json' \
+          --fail-with-body \
           --data-raw '{
             "username": "portaluser",
             "password": "mcvV2KYw9eKPqNagjGy5"
