--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "start": "node src/index.js",
-    "test": "jest src/test/unit"
+    "test": "jest src/test/unit",
+    "integration-test-authorisation": "jest integration_test/authorisation/tests/index.test.js"
   },
   "repository": {
     "type": "git",
