--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -103,7 +103,8 @@ jobs:
     - name: Run integration tests
       run: |-
         # Load AUTH_SERVER_CLIENTKEY and AUTH_SERVER_CLIENTSECRET into our env
-        eval $(kubectl get -o json configmap oauth-app-credentials | jq -r '.data | to_entries | .[] | .key + "=\"" + .value + "\""')
+        CONFIGMAPNAME="$(kubectl get job wso2is-populate -o json | jq -r '.spec.template.spec.containers[] | select(.name == "job").envFrom[] | select(.configMapRef.name | test("oauth-app-credentials")) | .configMapRef.name')"
+        eval $(kubectl get -o json configmap "$CONFIGMAPNAME" | jq -r '.data | to_entries | .[] | .key + "=\"" + .value + "\""')
         npm ci
         npm run integration-test-authorisation
 
