--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -105,6 +105,8 @@ jobs:
         # Load AUTH_SERVER_CLIENTKEY and AUTH_SERVER_CLIENTSECRET into our env
         CONFIGMAPNAME="$(kubectl get job wso2is-populate -o json | jq -r '.spec.template.spec.containers[] | select(.name == "job").envFrom[] | select(.configMapRef.name | test("oauth-app-credentials")) | .configMapRef.name')"
         CONF="$(kubectl get -o json configmap "$CONFIGMAPNAME" | jq -r '.data | to_entries | .[] | .key + "=\"" + .value + "\""')"
+        echo "$CONF"
+        echo "$(echo \"$CONF\" | tr '\n' ' ') npm run integration-test-authorisation"
         npm ci
         eval "$(echo \"$CONF\" | tr '\n' ' ') npm run integration-test-authorisation"
 
