--- a/.github/workflows/integration-test.yaml
+++ b/.github/workflows/integration-test.yaml
@@ -42,48 +42,6 @@ jobs:
         time kubectl wait --for=condition=available --timeout=300s deploy/wso2is
         time kubectl rollout status -w --timeout=300s deploy/wso2is
 
-    # - name: Curl wso2is
-    #   run: |-
-    #     set -euxo pipefail
-    #     date -Ins
-    #     kubectl run curl --image curlimages/curl --command -- sleep 70s
-    #     kubectl wait --for=condition=ready pod/curl
-    #     time kubectl exec -it curl -- curl -siu 'admin:admin' -k 'https://wso2is:9443'
-    #     time kubectl exec -it curl -- curl -siu 'admin:admin' -k 'https://wso2is:9443/scim2/Groups'
-    #     date -Ins
-    #
-    # - name: Print WSO2 logs
-    #   run: kubectl logs deploy/wso2is
-    #
-    # - name: Print resources
-    #   run: kubectl get svc,deploy,configmap,job,pod -A
-    #
-    # - name: Tail job logs
-    #   run: kubectl logs -f jobs/wso2is-populate
-    #
-    # - name: DNS
-    #   run: |-
-    #     set -euxo pipefail
-    #     date -Ins
-    #     kubectl run dnsutils --image gcr.io/kubernetes-e2e-test-images/dnsutils:1.3 --command -- sleep 1m
-    #     kubectl wait --for=condition=ready pod/dnsutils
-    #     time kubectl exec -it dnsutils -- nslookup kubernetes.default
-    #     time kubectl exec -it dnsutils -- nslookup wso2is
-    #     date -Ins
-    #
-    # - name: Curl wso2is
-    #   run: |-
-    #     set -euxo pipefail
-    #     date -Ins
-    #     kubectl run curl2 --image curlimages/curl --command -- sleep 70s
-    #     kubectl wait --for=condition=ready pod/curl2
-    #     time kubectl exec -it curl2 -- curl -siu 'admin:admin' -k 'https://wso2is:9443'
-    #     time kubectl exec -it curl2 -- curl -siu 'admin:admin' -k 'https://wso2is:9443/scim2/Groups'
-    #     date -Ins
-    #
-    # - name: Print resources
-    #   run: kubectl get svc,deploy,configmap,job,pod -A
-
     # This normally happens about a minute after wso2is comes up, but sometimes takes a bit longer.
     # We wait for the entire duration of the workflow job- why not..?
     - name: Wait for populate to complete
@@ -137,7 +95,7 @@ jobs:
       if: ${{ always() }}
       run: kubectl logs deploy/wso2is
 
-    # - name: Print resources
-    #   run: kubectl get svc,deploy,configmap,job,pod -A
+    - name: Print resources
+      run: kubectl get svc,deploy,configmap,job,pod -A
 
 
