--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "check-types": "^9.0.1",
-    "dotenv": "^8.0.0"
+    "dotenv": "^8.0.0",
+    "got": "^11.8.2"
   }
 }
