Use image pull secrets for portal also- the advantage of doing this is that it won't cause any problems if the image doesn't need the creds, but if it does, it'll be easier.

--- a/integration_test/local/kustomization.yaml
+++ b/integration_test/local/kustomization.yaml
@@ -18,3 +18,13 @@ patches:
         spec:
           imagePullSecrets:
           - name: regcred
+- patch: |-
+    apiVersion: apps/v1
+    kind: Deployment
+    metadata:
+      name: portal-backend
+    spec:
+      template:
+        spec:
+          imagePullSecrets:
+          - name: regcred
