--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -16,5 +16,4 @@ jobs:
     - run: tree "$NIX_PATH"
     - run: ls /nix/var/nix/profiles
     - run: ls -hAl ~/
-    # - run: ls -hAl ~/.nix-profile
-    - run: nix-env -iA default.nix
+    - run: nix-env -f default.nix
