--- a/.github/workflows/test-terraform.yaml
+++ b/.github/workflows/test-terraform.yaml
@@ -13,8 +13,9 @@ jobs:
     - run: which terraform
     - run: nix-build
     - run: which terraform
-    - run: nix-env -i terraform_0_14
+    # - run: nix-env -i terraform_0_14 # fails
     - run: nix-env -iA terraform_0_14
+    - run: nix-env -i nixpkgs.terraform_0_14
     - run: tree "$NIX_PATH"
     - run: ls /nix/var/nix/profiles
     - run: ls -hAl ~/
